added temp setup on selections.html.

--- a/about.html
+++ b/about.html
@@ -21,3 +21,138 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 </head>
+
+<body>
+
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-dark">
+            <div class="container">
+                <a href="index.html" class="navbar-brand">
+                    <img src="images/logo.svg" alt="">
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <i class="fas fa-bars"></i>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="about.html">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="selections.html">Selections</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contact.html">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+    <section class="our-chef">
+        <h2>Meet our Chef</h2>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4">
+                    <div class="chef-image">
+                        <img src="images/Charles_Amherst.png" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-8">
+                    <div class="about-chef">
+                        <h3>Charles Amherst, owner/chef</h3>
+                        <p>A native of Haiti, Charles Amherst has created his own brand of a successful steakhouse through his strong work ethic, focused creativity, and embodied passion.  Chaz 51 Steakhouse is the “Why” behind everything Charles does, behind the scene, from morning to night, seven days a week.</p>
+
+                        <p>Charles’ journey began in his home kitchen in Haiti where he learned the tools of his trade with a hand in cooking.  Using fresh ingredients in his homeland was not a luxury, it was a way of life.  The aroma of the family’s culinary creations wafted through the open doorways for all passersby to engage.  It was this sense of togetherness in preparing the daily family meals that inspired Charles from an early age.</p>
+
+                        <p>Having immigrated to the USA as a young man, Charles had his sights set on building his own empire.  He chose the road less traveled, and continued down his own path - front and center before him - to achieve his destiny.</p>
+
+                        <p>Launching Chaz 51 Steakhouse is the “why” for the Chef Chaz Story.  Charles reignited what it means to create a culinary experience that draws local patrons and visitors from across the globe.  Offering a menu full of flavorful dishes made from the freshest ingredients is not to be compromised.  Foodies everywhere expect the unexpected, and Chaz 51 delivers.</p>
+
+                        <p>High-end cuisine to challenge even those with the most discerning taste is the “why” behind everything Charles does.  The selections prepared for the guests seek to excite the palate, inspire the epicurean adventurer, and transport first-time diners to becoming loyal patrons.</p>
+
+                        <p>Top quality ingredients combined with a refined technique are the basis for seasonally inspired menus.</p>
+
+                        <p>Chaz 51 Steakhouse is a community jewel combining gourmet selections in a comfortable local setting.  Chaz 51 can accommodate an intimate dinner for two, four, or large parties.  Private special celebrations can be held in the separate function room.  Thank you for choosing to dine at Chaz 51 Steakhouse.  It is our pleasure to serve you, and please share your experience with your family and friends.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="our-team">
+        <h2>Our Management Team</h2>
+        <div class="container">
+            <div class="our-team-grid">
+                <div class="our-team-box">
+                    <a href="#">
+                        <img src="images/Charles_Amherst.png" alt="">
+                        <h3>Charles Amherst</h3>
+                    </a>
+                </div>
+                <div class="our-team-box">
+                    <a href="#">
+                        <img src="images/Charles_Amherst.png" alt="">
+                        <h3>Charles Amherst</h3>
+                    </a>
+                </div>
+                <div class="our-team-box">
+                    <a href="#">
+                        <img src="images/Charles_Amherst.png" alt="">
+                        <h3>Charles Amherst</h3>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-3">
+                    <div class="footer-logo">
+                        <a href="index.html">
+                            <img src="images/logo.svg" alt="Logo">
+                        </a>
+                    </div>
+                </div>
+                <div class="col-lg-3">
+                    <div class="footer-post">
+                        <h3>RECENT POSTS</h3>
+                        <ul>
+                            <li><a href="#">Chaz 51 hosts Haiti relief event</a></li>
+                            <li><a href="#">Chaz to premiere Chaz 51 after dark</a></li>
+                            <li><a href="#">Steakhouse hosts Venice football team</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-3">
+                    <div class="footer-contact">
+                        <h3>Contact Info</h3>
+                        <ul>
+                            <li>Chaz 51 steakhouse 549 us-41 bypass Venice, Florida 34285</li>
+                            <li>Sunday - Thursday: 4pm - 9pm<br>Friday & Saturday: 4pm - 1am</li>
+                            <li><a href="tel:(941) 484-6200">(941) 484-6200</a> call for reservations</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-3">
+                    <div class="footer-social">
+                        <ul>
+                            <li><a href="http://www.facebook.com/chaz51steakhouse" target="_blank"><i class="fab fa-facebook"></i></a></li>
+                            <li><a href="https://www.instagram.com/chaz51steakhouse" target="_blank"><i class="fab fa-instagram"></i></a></li><br>
+                            <li><a href="https://www.twitter.com/51_chaz" target="_blank"><i class="fab fa-twitter"></i></a></li>
+                            <li><a href="https://www.yelp.com/biz/chaz-51-steak-house-venice" target="_blank"><i class="fab fa-yelp"></i></a></li>
+                            <li><a href="https://www.tripadvisor.com/Restaurant_Review-g34705-d2287174-Reviews-Chaz_51_Steak_House-Venice_Florida.html?m=19905" target="_blank"><i class="fab fa-tripadvisor"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+</body>
+</html>
