added source code for contact.html

--- a/selections.html
+++ b/selections.html
@@ -22,3 +22,123 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-dark">
+            <div class="container">
+                <a href="index.html" class="navbar-brand">
+                    <img src="images/logo.svg" alt="">
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <i class="fas fa-bars"></i>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="about.html">About</a>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="selections.html">Selections</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contact.html">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+    <section class="selections">
+        <h2>Our Selections</h2>
+        <div class="container">
+            <div class="our-selections">
+                <div class="selection-box">
+                    <a href="#">
+                        <img src="images/featured_image.png" alt="">
+                        <h3>Happy Hour</h3>
+                    </a>
+                </div>
+                <div class="selection-box">
+                    <a href="#">
+                        <img src="images/featured_image.png" alt="">
+                        <h3>Dinner Menu</h3>
+                    </a>
+                </div>
+                <div class="selection-box">
+                    <a href="#">
+                        <img src="images/featured_image.png" alt="">
+                        <h3>Wine Menu</h3>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="dining-room">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class="dining-room-content">
+                        <h2>Private Dining Room</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do </p>
+                        <a href="#" class="theme-btn">Click Me!</a>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="dining-room-image">
+                        <img src="images/intro_image.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-3">
+                    <div class="footer-logo">
+                        <a href="index.html">
+                            <img src="images/logo.svg" alt="Logo">
+                        </a>
+                    </div>
+                </div>
+                <div class="col-lg-3">
+                    <div class="footer-post">
+                        <h3>RECENT POSTS</h3>
+                        <ul>
+                            <li><a href="#">Chaz 51 hosts Haiti relief event</a></li>
+                            <li><a href="#">Chaz to premiere Chaz 51 after dark</a></li>
+                            <li><a href="#">Steakhouse hosts Venice football team</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-3">
+                    <div class="footer-contact">
+                        <h3>Contact Info</h3>
+                        <ul>
+                            <li>Chaz 51 steakhouse 549 us-41 bypass Venice, Florida 34285</li>
+                            <li>Sunday - Thursday: 4pm - 9pm<br>Friday & Saturday: 4pm - 1am</li>
+                            <li><a href="tel:(941) 484-6200">(941) 484-6200</a> call for reservations</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-3">
+                    <div class="footer-social">
+                        <ul>
+                            <li><a href="http://www.facebook.com/chaz51steakhouse" target="_blank"><i class="fab fa-facebook"></i></a></li>
+                            <li><a href="https://www.instagram.com/chaz51steakhouse" target="_blank"><i class="fab fa-instagram"></i></a></li><br>
+                            <li><a href="https://www.twitter.com/51_chaz" target="_blank"><i class="fab fa-twitter"></i></a></li>
+                            <li><a href="https://www.yelp.com/biz/chaz-51-steak-house-venice" target="_blank"><i class="fab fa-yelp"></i></a></li>
+                            <li><a href="https://www.tripadvisor.com/Restaurant_Review-g34705-d2287174-Reviews-Chaz_51_Steak_House-Venice_Florida.html?m=19905" target="_blank"><i class="fab fa-tripadvisor"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+</body>
+</html>
