--- a/index.html
+++ b/index.html
@@ -86,22 +86,13 @@
                         </a>
                     </div>
                 </div>
-                <div class="col-lg-3">
-                    <div class="footer-post">
-                        <h3>RECENT POSTS</h3>
-                        <ul>
-                            <li><a href="#">Chaz 51 hosts Haiti relief event</a></li>
-                            <li><a href="#">Chaz to premiere Chaz 51 after dark</a></li>
-                            <li><a href="#">Steakhouse hosts Venice football team</a></li>
-                        </ul>
-                    </div>
-                </div>
+
                 <div class="col-lg-3">
                     <div class="footer-contact">
                         <h3>Contact Info</h3>
                         <ul>
-                            <li>Chaz 51 steakhouse 549 us-41 bypass Venice, Florida 34285</li>
-                            <li>Sunday - Thursday: 4pm - 9pm<br>Friday & Saturday: 4pm - 1am</li>
+                            <li>Chaz 51 steakhouse 549 US-41 Bypass Venice, Florida 34285</li>
+                            <li>Sunday - Thursday: 4pm - 9pm<br>Friday & Saturday: 4pm - 11pm</li>
                             <li><a href="tel:(941) 484-6200">(941) 484-6200</a> call for reservations</li>
                         </ul>
                     </div>
