changed h2 after dark <p> text.

--- a/index.html
+++ b/index.html
@@ -60,9 +60,10 @@
             <div class="row">
                 <div class="col-lg-8">
                     <div class="introduction">
-                        <h2>Experience more after dark.</h2>
+                        <h2>Experience More After Dark.</h2>
                         <img src="images/intro_image.png" alt="Intro Image">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do </p>
+                        <p>Chaz 51 Steakhouse is proud to launch Chaz After Dark which features extended Happy Hour and late night entertainment. On Friday and Saturday evenings, After Dark begins at 9:30pm - 11pm where guests can enjoy entertainment and discounted food and beverages. Our full After Dark schedule will be released soon to highlighting our latest happenings.
+                        </p>
                     </div>
                 </div>
                 <div class="col-lg-4">
