changed <p> text in h2 and footer element, removed blog posts.

--- a/contact.html
+++ b/contact.html
@@ -92,8 +92,8 @@
 
     <section class="contact-content">
         <div class="container">
-            <h2>The Chaz 51 steakhouse guarantee</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doeiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud enon</p>
+            <h2>The Chaz 51 Steakhouse Guarantee</h2>
+            <p>Our management team wants to make sure your order is correct every time and that you dining experience exceeds expectations. If for some reason we fall short of this, please ask your server to see a member of management. We promise to make it right -- guaranteed.</p>
         </div>
     </section>
 
@@ -107,16 +107,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="col-lg-3">
-                    <div class="footer-post">
-                        <h3>RECENT POSTS</h3>
-                        <ul>
-                            <li><a href="#">Chaz 51 hosts Haiti relief event</a></li>
-                            <li><a href="#">Chaz to premiere Chaz 51 after dark</a></li>
-                            <li><a href="#">Steakhouse hosts Venice football team</a></li>
-                        </ul>
-                    </div>
-                </div>
+        
                 <div class="col-lg-3">
                     <div class="footer-contact">
                         <h3>Contact Info</h3>
