--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <div class="featured-item">
                         <h2>Featured Item</h2>
                         <img src="images/featured_image.png" alt="Featured Image">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do</p>
+                        <p>Looking for a Gluten-Free option? Our popoular Seasme Ahi Tuna is perfect for those looking for make healthy food choices, but never sacrifice flavor. Order today!</p>
                     </div>
                 </div>
             </div>
