updated footer on all pages for consistantcy.

--- a/selections.html
+++ b/selections.html
@@ -116,12 +116,10 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-lg-3">
-                    <div class="footer-contact">
-                        <h3>Contact Info</h3>
+                <h3>Contact Info</h3>
                         <ul>
-                            <li>Chaz 51 steakhouse 549 us-41 bypass Venice, Florida 34285</li>
-                            <li>Sunday - Thursday: 4pm - 9pm<br>Friday & Saturday: 4pm - 1am</li>
+                            <li> 549 US-41 Bypass Venice, Florida 34285</li>
+                            <li>Sunday - Thursday: 4pm - 9pm<br>Friday & Saturday: 4pm - 11pm</li>
                             <li><a href="tel:(941) 484-6200">(941) 484-6200</a> call for reservations</li>
                         </ul>
                     </div>
