made changes to about.html, removed management staff due to changes. will add other elements. Also, updated PDR <p> text and linked button to contact.html

--- a/selections.html
+++ b/selections.html
@@ -83,8 +83,8 @@
                 <div class="col-lg-6">
                     <div class="dining-room-content">
                         <h2>Private Dining Room</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do </p>
-                        <a href="#" class="theme-btn">Click Me!</a>
+                        <p>Here at Chaz 51 Steakhouse, our private dining room features the best intimate setting for special ocassions such as weddings, birthday parties, anniversaries, and more. Our private room is also perfer for companies looking to host seminars or conferences. Choose from our tier menu and chose the best options to make your event a memorable one. </p>
+                        <a href="contact.html" class="theme-btn">Book Me!</a>
                     </div>
                 </div>
                 <div class="col-lg-6">
@@ -107,16 +107,8 @@
                     </div>
                 </div>
                 <div class="col-lg-3">
-                    <div class="footer-post">
-                        <h3>RECENT POSTS</h3>
-                        <ul>
-                            <li><a href="#">Chaz 51 hosts Haiti relief event</a></li>
-                            <li><a href="#">Chaz to premiere Chaz 51 after dark</a></li>
-                            <li><a href="#">Steakhouse hosts Venice football team</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <h3>Contact Info</h3>
+                    <div class="footer-contact">
+                        <h3>Contact Info</h3>
                         <ul>
                             <li> 549 US-41 Bypass Venice, Florida 34285</li>
                             <li>Sunday - Thursday: 4pm - 9pm<br>Friday & Saturday: 4pm - 11pm</li>
