added images, google analytics.

--- a/about.html
+++ b/about.html
@@ -59,9 +59,10 @@
             <div class="row">
                 <div class="col-lg-4">
                     <div class="chef-image">
-                        <img src="images/Charles_Amherst.png" alt="">
+                        <img src="images/Charles_Amherst.png" alt="photo of Charles Amherst">
                     </div>
                 </div>
+                <figcaption>Fig.1 - Charles Amherst, Owner/Chef.</figcaption>
                 <div class="col-lg-8">
                     <div class="about-chef">
                         <h3>Charles Amherst, owner/chef</h3>
@@ -83,7 +84,7 @@
             </div>
         </div>
     </section>
-    
+
     <footer>
         <div class="container">
             <div class="row">
