--- a/selections.html
+++ b/selections.html
@@ -57,19 +57,19 @@
             <div class="our-selections">
                 <div class="selection-box">
                     <a href="#">
-                        <img src="images/featured_image.png" alt="">
+                        <img src="images/featured_image.png" alt="happy hour menu">
                         <h3>Happy Hour</h3>
                     </a>
                 </div>
                 <div class="selection-box">
                     <a href="#">
-                        <img src="images/featured_image.png" alt="">
+                        <img src="images/featured_image.png" alt="dinner menu">
                         <h3>Dinner Menu</h3>
                     </a>
                 </div>
                 <div class="selection-box">
                     <a href="#">
-                        <img src="images/featured_image.png" alt="">
+                        <img src="images/featured_image.png" alt="wine menu">
                         <h3>Wine Menu</h3>
                     </a>
                 </div>
@@ -89,7 +89,7 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="dining-room-image">
-                        <img src="images/intro_image.png" alt="">
+                        <img src="images/intro_image.png" alt="bartender making a cocktail">
                     </div>
                 </div>
             </div>
