added list to selections.html.

--- a/selections.html
+++ b/selections.html
@@ -84,6 +84,16 @@
                     <div class="dining-room-content">
                         <h2>Private Dining Room</h2>
                         <p>Here at Chaz 51 Steakhouse, our private dining room features the best intimate setting for special ocassions such as weddings, birthday parties, anniversaries, and more. Our private room is also perfer for companies looking to host seminars or conferences. Choose from our tier menu and chose the best options to make your event a memorable one. </p>
+
+                        <div class="dining-room-features mt-3">
+                            Perfect for:
+                            <ul>
+                                <li> Events</li>
+                                <li>Birthdays</li>
+                                <li>Corporate Luncheons</li>
+                            </ul>
+                        </div>
+
                         <a href="contact.html" class="theme-btn">Book Me!</a>
                     </div>
                 </div>
