added text form to contact.html.

--- a/contact.html
+++ b/contact.html
@@ -84,6 +84,11 @@
                         <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios3" value="General Inquiry" required>
                         <label class="form-check-label" for="exampleRadios3">General Inquiry</label>
                     </div>
+                    <div class="form-row">
+                        <div class="form-group col-md-12 mt-3">
+                            <label>Comment</label>
+                            <textarea name="comment" rows="3" class="form-control comment-field" required></textarea>
+                        </div>
                     <input type="submit" name="submit" class="submit-btn" value="Submit">
                 </form>
             </div>
