--- a/selections.html
+++ b/selections.html
@@ -57,19 +57,19 @@
             <div class="our-selections">
                 <div class="selection-box">
                     <a href="#">
-                        <img src="images/featured_image.png" alt="happy hour menu">
+                        <img src="images/chaz51_fries.jpg" alt="Green bean fries">
                         <h3>Happy Hour</h3>
                     </a>
                 </div>
                 <div class="selection-box">
                     <a href="#">
-                        <img src="images/featured_image.png" alt="dinner menu">
+                        <img src="images/chaz_steak.jpg" alt="steak dinner">
                         <h3>Dinner Menu</h3>
                     </a>
                 </div>
                 <div class="selection-box">
                     <a href="#">
-                        <img src="images/featured_image.png" alt="wine menu">
+                        <img src="images/Chaz_wine.jpg" alt="wine">
                         <h3>Wine Menu</h3>
                     </a>
                 </div>
