--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </nav>
     </header>
     <section class="hero_image">
-        <img src="images/hero_image.png" alt="hero_image" class="w-100">
+        <img src="images/hero_image.png" alt="People at bar" class="w-100">
     </section>
 
     <section class="intro">
